chore: move smallrye config lib to toml

--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -31,6 +31,7 @@ jacoco = "0.8.12"
 
 quarkus = "3.18.1"
 quarkus-vault = "4.1.0"
+smallryeConfig = "3.11.2"
 
 [libraries]
 metrics-core = { module = "io.dropwizard.metrics:metrics-core", version.ref = "metrics" }
@@ -66,6 +67,8 @@ quarkus-springBoot-di = { group = "io.quarkus", name = "quarkus-spring-di", vers
 quarkus-springBoot-properties = { group = "io.quarkus", name = "quarkus-spring-boot-properties", version.ref = "quarkus" }
 quarkus-junit5 = { group = "io.quarkus", name = "quarkus-junit5", version.ref = "quarkus" }
 quarkus-extension-vault = { group = "io.quarkiverse.vault", name = "quarkus-vault", version.ref = "quarkus-vault" }
+
+smallrye-config-core = { group = "io.smallrye.config", name = "smallrye-config-core", version.ref = "smallryeConfig" }
 
 junit-jupiterEngine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junitJupiter" }
 junit-vintageEngine = { module = "org.junit.vintage:junit-vintage-engine", version.ref = "junitJupiter" }
