--- a/src/packages/src/xroad/common/proxy/etc/xroad/services/proxy.conf
+++ b/src/packages/src/xroad/common/proxy/etc/xroad/services/proxy.conf
@@ -21,9 +21,12 @@ CP="/usr/share/xroad/jlib/proxy.jar"
 
 XROAD_PROXY_PARAMS=" -Xms100m -Xmx512m -XX:MaxMetaspaceSize=140m \
 -Djavax.net.ssl.sessionCacheSize=10000 \
--Dlogback.configurationFile=/etc/xroad/conf.d/proxy-logback.xml \
--Dxroad.proxy.clientHandlers=${CLIENT_HANDLERS#?} \
--Dxroad.proxy.serverServiceHandlers=${SERVICE_HANDLERS#?} \
--Dxroad.proxy.serverRestServiceHandlers=${SERVICE_REST_HANDLERS#?} $XROAD_PROXY_PARAMS"
+-Djava.util.logging.manager=org.jboss.logmanager.LogManager \
+-Dquarkus.profile=${XROAD_QUARKUS_PROFILES} $XROAD_PROXY_PARAMS"
+
+# -Dxroad.proxy.clientHandlers=${CLIENT_HANDLERS#?} \
+# -Dxroad.proxy.serverServiceHandlers=${SERVICE_HANDLERS#?} \
+# -Dxroad.proxy.serverRestServiceHandlers=${SERVICE_REST_HANDLERS#?} \
+
 
 apply_local_conf XROAD_PROXY_PARAMS
