--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -18,6 +18,10 @@ spring:
       enabled: false #TODO disabled until rpc tls is enabled
   profiles:
     include: nontest
+  config:
+    import:
+      - classpath:/xroad-common.yaml
+      - optional:file:/etc/xroad/conf.d/local.yaml
 
 # TLS
 # (can be overridden with external ssl.properties)
