--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
@@ -1,4 +1,7 @@
 xroad:
+  common:
+    global-conf:
+      source: "REMOTE"
   configuration-client:
     update-interval: 3
     global-conf-tls-cert-verification: false
