chore: Fix OpenAPI service deployment on local docker env

--- a/Docker/xrd-dev-stack/.env
+++ b/Docker/xrd-dev-stack/.env
@@ -1,5 +1,6 @@
 CS_IMG=ghcr.io/nordic-institute/xrddev-central-server:latest
 SS_IMG=ghcr.io/nordic-institute/xrddev-security-server:latest
 CA_IMG=ghcr.io/nordic-institute/xrddev-testca:latest
+IS_OPENAPI_IMG=ghcr.io/nordic-institute/xrddev-example-restapi:latest
 IS_SOAP_IMG=niis/example-adapter:latest
 COMPOSE_PROJECT_NAME=xrd-dev-stack
