--- a/ansible/roles/xroad-hurl/files/hurl.env
+++ b/ansible/roles/xroad-hurl/files/hurl.env
@@ -9,5 +9,5 @@ example_service_address=http://xrd-is:8080/example-adapter/Endpoint
 is_rest_url=http://xrd-is/integration/mock_1
 is_rest_service_code=mock1
 
-is_rest_openapi_url=http://xrd-is:8081/v3/api-docs
-is_rest_openapi_service_code=restapi
+is_openapi_url=http://xrd-is:8081/v3/api-docs
+is_openapi_service_code=restapi
