--- a/development/hurl/scenarios/vars.env
+++ b/development/hurl/scenarios/vars.env
@@ -9,8 +9,8 @@ example_service_address=http://issoap:8080/example-adapter/Endpoint
 is_rest_url=http://isrest:8080/integration/mock_1
 is_rest_service_code=mock1
 
-is_rest_openapi_url=http://isrest:8081/v3/api-docs
-is_rest_openapi_service_code=restapi
+is_openapi_url=http://isopenapi:8080/v3/api-docs
+is_openapi_service_code=restapi
 
 is_rest_payloadgen_url=http://payloadgen:8080
 is_rest_payloadgen_service_code=payloadgen
