chore: Fix OpenAPI service deployment for e2e tests

--- a/src/security-server/e2e-test/src/intTest/resources/application-override.yml
+++ b/src/security-server/e2e-test/src/intTest/resources/application-override.yml
@@ -27,6 +27,7 @@ test-automation:
     cs-image: "ghcr.io/nordic-institute/xrddev-central-server:latest"
     ss-image: "ghcr.io/nordic-institute/xrddev-security-server:latest"
     ca-image: "ghcr.io/nordic-institute/xrddev-testca:latest"
+    isopenapi-image: "ghcr.io/nordic-institute/xrddev-example-restapi:latest"
     issoap-image: "niis/example-adapter:latest"
     use-custom-env: false
     custom-env-mapping: # original : custom
