feat: As an X-Road Security Server Administrator I want the authentication and signing certificates to be activated automatically when ACME is used so that I don't need to do it manually
refs: XRDDEV-2735

--- a/src/common/common-mail/src/main/resources/notifications.properties
+++ b/src/common/common-mail/src/main/resources/notifications.properties
@@ -2,10 +2,12 @@ test_mail_title = Test e-mail from the Security Server "{0}"
 test_mail_content = This is a test e-mail sent from the Security Server "{0}". Receiving this email means that the Security Server is successfully connected to the mail server.
 
 acme_auth_cert_renewal_success_title = Authentication certificate renewal SUCCESS notification
-acme_auth_cert_renewal_success_content = Authentication certificate of the Security Server "{0}" has been successfully renewed. The new authentication certificate "{1}" has been sent to the Central Server for registration. Once the registration request has been approved by the X-Road Operator, the new authentication certificate needs to be activated manually on the Security Server. You will receive another notification email when the authentication certificate has been registered.
+acme_auth_cert_renewal_success_content = Authentication certificate of the Security Server "{0}" has been successfully renewed. The new authentication certificate "{1}" has been sent to the Central Server for registration. You will receive another notification email when the authentication certificate has been registered.
+acme_auth_cert_renewal_success_content_activate = Once the registration request has been approved by the X-Road Operator, the new authentication certificate needs to be activated manually on the Security Server.
 
 acme_sign_cert_renewal_success_title = Signing certificate renewal SUCCESS notification
-acme_sign_cert_renewal_success_content = Signing certificate of the member "{0}" on the Security Server "{1}" has been successfully renewed. The new signing certificate "{2}" needs to be activated manually on the Security Server.
+acme_sign_cert_renewal_success_content = Signing certificate "{0}" of the member "{1}" on the Security Server "{2}" has been successfully renewed.
+acme_sign_cert_renewal_success_content_activate = The new signing certificate needs to be activated manually on the Security Server.
 
 acme_auth_cert_renewal_failure_title = Authentication certificate renewal FAILURE notification
 acme_auth_cert_renewal_failure_content = Renewing the authentication certificate "{0}" of the Security Server "{1}" has failed. Please see the Security Server logs for more detailed information about the problem. Error message: {2}
@@ -14,4 +16,17 @@ acme_sign_cert_renewal_failure_title = Signing certificate renewal FAILURE notif
 acme_sign_cert_renewal_failure_content = Renewing the signing certificate "{0}" of the member "{1}" on the Security Server "{2}" has failed. Please see the Security Server logs for more detailed information about the problem. Error message: {3}
 
 auth_cert_registration_success_title = Authentication certificate registration SUCCESS notification
-auth_cert_registration_success_content = The authentication certificate "{0}" of the Security Server "{1}" has been successfully registered by the X-Road Operator. The new authentication certificate needs to be activated manually on the Security Server.
+auth_cert_registration_success_content = The authentication certificate "{0}" of the Security Server "{1}" has been successfully registered by the X-Road Operator.
+auth_cert_registration_success_content_activate = The new authentication certificate needs to be activated manually on the Security Server.
+
+auth_cert_automatic_activation_title = Authentication certificate activation SUCCESS notification
+auth_cert_automatic_activation_content = The authentication certificate "{0}" of the Security Server "{1}" has been successfully activated.
+
+sign_cert_automatic_activation_title = Signing certificate activation SUCCESS notification
+sign_cert_automatic_activation_content = The signing certificate "{0}" of the member "{1}" on the Security Server "{2}" has been successfully activated.
+
+auth_cert_automatic_activation_failure_title = Authentication certificate automatic activation FAILURE notification
+auth_cert_automatic_activation_failure_content = Activating the authentication certificate "{0}" of the Security Server "{1}" has failed, because the OCSP responses could not be verified. Please see the Security Server logs for more detailed information about the problem. Error message: {2}
+
+sign_cert_automatic_activation_failure_title = Signing certificate automatic activation FAILURE notification
+sign_cert_automatic_activation_failure_content = Activating the signing certificate "{0}" of the member "{1}" on the Security Server "{2}" has failed, because the OCSP responses could not be verified. Please see the Security Server logs for more detailed information about the problem. Error message: {3}
