--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.ini
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.ini
@@ -4,6 +4,7 @@ rate-limit-requests-per-second=100
 rate-limit-requests-per-minute=1000
 acme-challenge-port-enabled=true
 wsdl-validator-command = /usr/share/xroad/wsdlvalidator/bin/wsdlvalidator_wrapper.sh
+automatic-activate-acme-sign-certificate=true
 [proxy]
 backup-encryption-enabled = true
 backup-encryption-keyids = "backup.key1@example.org, backup.key2@example.org, backup.key3@example.org"
