--- a/src/packages/src/xroad/common/signer/etc/xroad/services/signer-console.conf
+++ b/src/packages/src/xroad/common/signer/etc/xroad/services/signer-console.conf
@@ -7,7 +7,8 @@ XROAD_LOG_LEVEL="INFO"
 
 . /etc/xroad/services/global.conf
 
-XROAD_SIGNER_CONSOLE_PARAMS=" -Xmx50m -XX:MaxMetaspaceSize=70m \
--Dlogback.configurationFile=/etc/xroad/conf.d/signer-console-logback.xml $XROAD_SIGNER_CONSOLE_PARAMS"
+XROAD_SIGNER_PARAMS=" -Xmx50m -XX:MaxMetaspaceSize=70m -XX:+ExitOnOutOfMemoryError \
+-Djava.util.logging.manager=org.jboss.logmanager.LogManager \
+-Dquarkus.profile=cli,native ${XROAD_SIGNER_PARAMS}"
 
 apply_local_conf XROAD_SIGNER_CONSOLE_PARAMS
