--- a/src/packages/src/xroad/common/signer/etc/xroad/services/signer.conf
+++ b/src/packages/src/xroad/common/signer/etc/xroad/services/signer.conf
@@ -3,20 +3,10 @@
 # Please do not change this file! It will be overwritten by updates.
 # System specific changes should be added to /etc/xroad/services/local.conf
 
-XROAD_LOG_LEVEL="INFO"
-
 . /etc/xroad/services/global.conf
 
-for addon in "${ADDON_PATH}"/signer/*.conf
-do
- if [ -e "${addon}" ]; then
-  . "${addon}"
- fi
-done
-
-CP="/usr/share/xroad/jlib/signer.jar"
-
-XROAD_SIGNER_PARAMS="-Xmx50m -XX:MaxMetaspaceSize=70m \
--Dlogback.configurationFile=/etc/xroad/conf.d/signer-logback.xml $XROAD_SIGNER_PARAMS"
+XROAD_SIGNER_PARAMS=" -Xmx50m -XX:MaxMetaspaceSize=70m -XX:+ExitOnOutOfMemoryError \
+-Djava.util.logging.manager=org.jboss.logmanager.LogManager \
+-Dquarkus.profile=${XROAD_QUARKUS_PROFILES} ${XROAD_SIGNER_PARAMS}"
 
 apply_local_conf XROAD_SIGNER_PARAMS
