chore: signer cli improvements
Refs: XRDDEV-2829

--- a/src/packages/src/xroad/common/signer/etc/xroad/services/signer-console.conf
+++ b/src/packages/src/xroad/common/signer/etc/xroad/services/signer-console.conf
@@ -3,12 +3,10 @@
 # Please do not change this file! It will be overwritten by updates.
 # System specific changes should be added to /etc/xroad/services/local.conf
 
-XROAD_LOG_LEVEL="INFO"
-
 . /etc/xroad/services/global.conf
 
-XROAD_SIGNER_PARAMS=" -Xmx50m -XX:MaxMetaspaceSize=70m -XX:+ExitOnOutOfMemoryError \
+XROAD_SIGNER_CONSOLE_PARAMS=" -Xmx50m -XX:MaxMetaspaceSize=70m -XX:+ExitOnOutOfMemoryError \
 -Djava.util.logging.manager=org.jboss.logmanager.LogManager \
--Dquarkus.profile=cli,native ${XROAD_SIGNER_PARAMS}"
+-Dquarkus.profile=cli,native ${XROAD_SIGNER_CONSOLE_PARAMS}"
 
 apply_local_conf XROAD_SIGNER_CONSOLE_PARAMS
