chore: remove need to set the XROAD_HOME environmental variable for common builds

--- a/src/central-server/admin-service/ui/license-check-and-add-config.json
+++ b/src/central-server/admin-service/ui/license-check-and-add-config.json
@@ -22,7 +22,8 @@
     "**/openapi-types.ts",
     "scripts/dtsgen-wrapper.js",
     "tests/e2e/testdata/",
-    "build/"
+    "build/",
+    ".settings/**"
   ],
   "license": "../../../LICENSE.txt",
   "licenseFormats": {
