--- a/src/shared-ui/license-check-and-add-config.json
+++ b/src/shared-ui/license-check-and-add-config.json
@@ -23,7 +23,8 @@
     "tests/unit/__snapshots__",
     "build.gradle.kts",
     "build/**",
-    ".gradle/**"
+    ".gradle/**",
+    ".settings/**"
   ],
   "license": "LICENSE.txt",
   "licenseFormats": {
