--- a/src/security-server/admin-service/ui/license-check-and-add-config.json
+++ b/src/security-server/admin-service/ui/license-check-and-add-config.json
@@ -19,7 +19,8 @@
     "**/openapi-types.ts",
     "scripts/dtsgen-wrapper.js",
     "tests/e2e/testdata/**",
-    "build/"
+    "build/",
+    ".settings/**"
   ],
   "license": "LICENSE.txt",
   "licenseFormats": {
