--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/services/local.conf
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/services/local.conf
@@ -1,2 +1,3 @@
 PROXY_UI_API_PARAMS="$PROXY_UI_API_PARAMS -Dserver.servlet.session.timeout=1m"
+XROAD_SIGNER_PARAMS="$XROAD_SIGNER_PARAMS -Dxroad.internal.passwordstore-provider=file"
 XROAD_MONITOR_PARAMS="-Djava.rmi.server.hostname=0.0.0.0 -Dcom.sun.management.jmxremote.rmi.port=$CONTAINER_JMX_PORT -Dcom.sun.management.jmxremote.port=$CONTAINER_JMX_PORT -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.local.only=false"
