chore: add SystemProperties source fallback
Refs: XRDDEV-2829

--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.ini
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.ini
@@ -17,4 +17,5 @@ messagelog-keystore-password=somepassword
 messagelog-key-id=key1
 archive-encryption-enabled=true
 [signer]
+;remove once SS manages to read local.yaml config
 enforce-token-pin-policy=true
