chore: fix ocsp reload job
Refs: XRDDEV-2829

--- a/src/service/signer/signer-application/src/main/resources/application.yaml
+++ b/src/service/signer/signer-application/src/main/resources/application.yaml
@@ -27,6 +27,11 @@ quarkus:
         enable: true
         path: /var/log/xroad/signer.log
 
+"%ss":
+  xroad:
+    signer:
+      ocsp-response-retrieval-active: true
+
 "%test":
   quarkus:
     log:
