--- a/src/service/op-monitor/op-monitor-application/src/main/resources/application.yaml
+++ b/src/service/op-monitor/op-monitor-application/src/main/resources/application.yaml
@@ -1,21 +1,21 @@
 quarkus:
   application:
     name: op-monitor-daemon
-    version: 1.0.0
-  spring-di:
-    enabled: true
-  vault:
-    devservices:
-      enabled: false
-  live-reload:
-    enabled: false
-  http:
-    host-enabled: false
   config:
     locations:
+      - /etc/xroad/conf.d/local.yaml
       - xroad-common.yaml
-      - xroad-ss-common.yaml
       - xroad-logging.yaml
+  scheduler:
+    start-mode: forced
+    enabled: true
+
+"%native":
+  quarkus:
+    log:
+      file:
+        enable: true
+        path: /var/log/xroad/op-monitor.log
 
 xroad:
   op-monitor:
@@ -23,7 +23,6 @@ xroad:
     port: 2080
     scheme: http
     keep-records-for-days: 7
-    clean-interval: 0 0 0/12 1/1 * ? *
     max-records-in-payload: 10000
     records-available-timestamp-offset-seconds: 60
     health-statistics-period-seconds: 600
@@ -33,3 +32,4 @@ xroad:
       connection.url: jdbc:postgresql://127.0.0.1:5432/op-monitor
       hikari.dataSource.currentSchema: opmonitor,public
       connection.username: opmonitor
+
