--- a/src/central-server/admin-service/application/src/main/resources/permissions.yml
+++ b/src/central-server/admin-service/application/src/main/resources/permissions.yml
@@ -98,6 +98,7 @@
 - ADD_ADDRESS_CHANGE_REQUEST: [ XROAD_MANAGEMENT_SERVICE ]
 - ADD_CLIENT_DISABLE_REQUEST: [ XROAD_MANAGEMENT_SERVICE ]
 - ADD_CLIENT_ENABLE_REQUEST: [ XROAD_MANAGEMENT_SERVICE ]
+- ADD_CLIENT_RENAME_REQUEST: [ XROAD_MANAGEMENT_SERVICE ]
 ##
 - VIEW_VERSION: [ XROAD_SYSTEM_ADMINISTRATOR, XROAD_SECURITY_OFFICER, XROAD_REGISTRATION_OFFICER, XROAD_MANAGEMENT_SERVICE ]
 - CREATE_API_KEY: [ XROAD_SYSTEM_ADMINISTRATOR ]
