feat: fix and enable parallel builds in Gradle

--- a/src/gradle.properties
+++ b/src/gradle.properties
@@ -1,4 +1,5 @@
 org.gradle.jvmargs=-Xmx1536m
+org.gradle.parallel=true
 
 xroadVersion=7.7.0
 xroadBuildType=SNAPSHOT
@@ -12,5 +13,5 @@ sonarqubeProjectKey=xroad
 sonarqubeOrganization=
 
 #Frontend defaults
- frontendNodeVersion=20.18.0
+frontendNodeVersion=20.18.0
 
