chore: proxy logging config
Refs: XRDDEV-2829

--- a/src/packages/src/xroad/common/proxy/etc/xroad/services/proxy.conf
+++ b/src/packages/src/xroad/common/proxy/etc/xroad/services/proxy.conf
@@ -24,6 +24,7 @@ XROAD_PROXY_PARAMS=" $(/usr/share/xroad/scripts/proxy_memory_helper.sh 'get-defa
 -Djava.util.logging.manager=org.jboss.logmanager.LogManager \
 -Dquarkus.profile=${XROAD_QUARKUS_PROFILES} $XROAD_PROXY_PARAMS"
 
+# todo: handlers!!!
 # -Dxroad.proxy.clientHandlers=${CLIENT_HANDLERS#?} \
 # -Dxroad.proxy.serverServiceHandlers=${SERVICE_HANDLERS#?} \
 # -Dxroad.proxy.serverRestServiceHandlers=${SERVICE_REST_HANDLERS#?} \
