--- a/src/service/proxy/proxy-application/src/main/resources/application.yaml
+++ b/src/service/proxy/proxy-application/src/main/resources/application.yaml
@@ -21,7 +21,32 @@ quarkus:
       file:
         enable: true
         path: /var/log/xroad/proxy.log
-#   TODO: clientproxy-access-log
-#   TODO: serverproxy-access-log
-#   TODO: and the rest logging configuration, check logback config
-
+      category:
+        "org.niis.xroad.proxy.core.clientproxy.RequestLog":
+          level: INFO
+          handlers: [ clientproxy-access-log ]
+          use-parent-handlers: false
+        "org.niis.xroad.proxy.core.serverproxy.RequestLog":
+          level: INFO
+          handlers: [ serverproxy-access-log ]
+          use-parent-handlers: false
+      handler:
+        file:
+          "clientproxy-access-log":
+            enable: true
+            path: /var/log/xroad/clientproxy_access.log
+            format: "%s%e%n"
+            encoding: utf-8
+            rotation:
+              max-file-size: 100m
+              file-suffix: .yyyy-MM-dd.zip
+              rotate-on-boot: false
+          "serverproxy-access-log":
+            enable: true
+            path: /var/log/xroad/serverproxy_access.log
+            format: "%s%e%n"
+            encoding: utf-8
+            rotation:
+              max-file-size: 100m
+              file-suffix: .yyyy-MM-dd.zip
+              rotate-on-boot: false
