--- a/ansible/roles/xroad-base/tasks/rhel.yml
+++ b/ansible/roles/xroad-base/tasks/rhel.yml
@@ -12,33 +12,7 @@
 - name: Install EPEL repository (RHEL)
   yum:
     name: "https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ansible_distribution_major_version}}.noarch.rpm"
-  when: not epel.stat.exists and ansible_distribution_major_version != "7"
-
-- name: Install EPEL repository (RHEL 7 only)
-  yum_repository:
-    name: epel
-    description: EPEL repository
-    baseurl: "https://dl.fedoraproject.org/pub/archive/epel/7/$basearch"
-  when: not epel.stat.exists and ansible_distribution_major_version == "7"
-
-- name: Setup the Adoptium repo (RHEL 7 only)
-  yum_repository:
-    name: "Adoptium"
-    file: "adoptium"
-    description: "Adoptium repository"
-    baseurl: "https://artifactory.niis.org/artifactory/rpm-adoptium-remote/rhel/7/x86_64"
-    enabled: yes
-    gpgcheck: no
-    repo_gpgcheck: no
-    state: present
-  when: ansible_distribution_major_version == "7"
-
-- name: Install Temurin JDK 21 (RHEL 7 only)
-  become: yes
-  yum:
-    name: "temurin-21-jdk"
-    state: present
-  when: ansible_distribution_major_version == "7"
+  when: not epel.stat.exists
 
 - name: X-Road repo key
   rpm_key:
