--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
@@ -11,6 +11,16 @@ xroad:
   signer:
     enforce-token-pin-policy: true
   proxy:
+    ssl-enabled: false # Can be removed once UI system tests configure a functional AUTH certificate
     health-check-port: 5558
     backup-encryption-enabled: true
     backup-encryption-keyids: [ "backup.key1@example.org", "backup.key2@example.org", "backup.key3@example.org" ]
+    addon:
+      op-monitor:
+        enabled: true
+  message-log:
+    messagelog-encryption-enabled: true
+    messagelog-keystore: /etc/xroad/messagelog/messagelog.p12
+    messagelog-keystore-password: somepassword
+    messagelog-key-id: key1
+    archive-encryption-enabled: true
