chore: fix and translate passwordstore Make files, exclude makeClean from clean chain since make isn't part of the build chain

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,15 @@
 XROADTOP = $(shell pwd)
 
+ARCH := $(shell uname -m)
+
+ifeq ($(ARCH),x86_64)
+    ARCH_DIR := amd64
+else ifeq ($(ARCH),aarch64)
+    ARCH_DIR := arm64
+else
+    $(error Unsupported architecture: $(ARCH))
+endif
+
 SUBDIRS = passwordstore
 
 all:
@@ -12,7 +22,7 @@ clean:
 	for i in $(SUBDIRS) ;\
 	do \
 		( echo $$i && cd $$i && $(MAKE) clean ) || exit 1 ;\
-		rm -f lib/* || exit 1 ;\
+    rm -f libs/$$i/$(ARCH_DIR)/* || exit 1 ;\
 	done
 
 tests:
