--- a/src/packages/src/xroad/common/op-monitor/etc/xroad/services/opmonitor.conf
+++ b/src/packages/src/xroad/common/op-monitor/etc/xroad/services/opmonitor.conf
@@ -5,11 +5,7 @@
 
 . /etc/xroad/services/global.conf
 
-CUSTOM_OPMON_PARAMS="$XROAD_OPMON_PARAMS"
-
-CP="/usr/share/xroad/jlib/op-monitor-daemon.jar"
-
 XROAD_OPMON_PARAMS=" -Xms50m -Xmx256m -XX:MaxMetaspaceSize=80m \
--Dquarkus.profile=native,secret-store $XROAD_OPMON_PARAMS"
+-Dquarkus.profile=${XROAD_QUARKUS_PROFILES} $XROAD_OPMON_PARAMS"
 
 apply_local_conf XROAD_OPMON_PARAMS
