--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -29,7 +29,7 @@ protobufPlugin = "0.9.4"
 checkstyle = "10.21.1"
 jacoco = "0.8.12"
 
-quarkus = "3.18.2"
+quarkus = "3.18.3"
 quarkus-vault = "4.1.0"
 smallryeConfig = "3.11.2"
 
@@ -63,7 +63,6 @@ quarkus-scheduler = { group = "io.quarkus", name = "quarkus-scheduler", version.
 quarkus-quartz = { group = "io.quarkus", name = "quarkus-quartz", version.ref = "quarkus" }
 quarkus-jaxb = { group = "io.quarkus", name = "quarkus-jaxb", version.ref = "quarkus" }
 quarkus-grpc = { group = "io.quarkus", name = "quarkus-grpc", version.ref = "quarkus" }
-quarkus-springBoot-di = { group = "io.quarkus", name = "quarkus-spring-di", version.ref = "quarkus" }
 quarkus-springBoot-properties = { group = "io.quarkus", name = "quarkus-spring-boot-properties", version.ref = "quarkus" }
 quarkus-junit5 = { group = "io.quarkus", name = "quarkus-junit5", version.ref = "quarkus" }
 quarkus-extension-vault = { group = "io.quarkiverse.vault", name = "quarkus-vault", version.ref = "quarkus-vault" }
@@ -188,6 +187,9 @@ archUnit-plugin-core = { module = "com.societegenerale.commons:arch-unit-build-p
 licenseGradlePlugin = { module = "gradle.plugin.com.hierynomus.gradle.plugins:license-gradle-plugin", version = "0.16.1" }
 archUnitGradlePlugin = { module = "com.societegenerale.commons:arch-unit-gradle-plugin", version.ref = "archUnitPlugin" }
 protobufGradlePlugin = { module = "com.google.protobuf:com.google.protobuf.gradle.plugin", version.ref= "protobufPlugin"}
+jibGradlePlugin = { module = "com.google.cloud.tools.jib:com.google.cloud.tools.jib.gradle.plugin", version = "3.4.4" }
+jibQuarkusExtension = { module = "com.google.cloud.tools:jib-quarkus-extension-gradle", version = "0.1.2" }
+quarkusGradlePlugin = { module = "io.quarkus:gradle-application-plugin", version.ref = "quarkus" }
 
 [bundles]
 metrics = ["metrics-core", "metrics-jmx"]
