--- a/ansible/roles/xroad-base/tasks/rhel.yml
+++ b/ansible/roles/xroad-base/tasks/rhel.yml
@@ -33,6 +33,25 @@
     state: present
     enabled: yes
 
+- name: X-Road dependencies repo key
+  rpm_key:
+    state: present
+    key: "{{ rhel_deps_repo_gpgkey }}"
+  when: rhel_deps_repo_gpgkey is defined
+
+- name: Setup repository for X-Road dependencies (RHEL)
+  yum_repository:
+    name: "x-road-dependencies"
+    file: "x-road-dependencies"
+    description: "X-Road dependencies repository for RHEL"
+    baseurl: "{{ rhel_deps_repo_baseurl }}"
+    gpgcheck: "{{ rhel_deps_repo_gpgcheck | default('no') }}"
+    gpgkey: "{{ rhel_deps_repo_gpgkey | default('') }}"
+    repo_gpgcheck: "{{ rhel_deps_repo_gpgcheck | default('no') }}"
+    metadata_expire: "{{ rhel_deps_repo_metadaexpire | default('86400') }}"
+    state: present
+    enabled: yes
+
 - name: Touch repo file
   file:
     path: "/etc/yum.repos.d/xroad.repo"
