--- a/ansible/vars_files/remote_repo.yml
+++ b/ansible/vars_files/remote_repo.yml
@@ -22,3 +22,9 @@ rhel_repo_gpgcheck: "yes"
 rhel_repo_gpgkey: "{{xroad_repo_key}}"
 rhel_repo_repogpgcheck: "yes"
 rhel_repo_metadataexpire: "21600"
+
+rhel_deps_repo_baseurl: "https://artifactory.niis.org/artifactory/xroad-dependencies-rpm"
+rhel_deps_repo_gpgcheck: "yes"
+rhel_deps_repo_gpgkey: "{{xroad_repo_key}}"
+rhel_deps_repo_repogpgcheck: "yes"
+rhel_deps_repo_metadataexpire: "21600"
