--- a/src/common/common-properties/src/main/resources/xroad-common.yaml
+++ b/src/common/common-properties/src/main/resources/xroad-common.yaml
@@ -14,7 +14,6 @@ quarkus:
     enabled: false
   http:
     host-enabled: false
-
 spring:
   main:
     banner-mode: log
@@ -27,6 +26,12 @@ spring:
       token: ${XROAD_SECRET_STORE_TOKEN}
       kv:
         enabled: false
+
+"%containerized":
+  quarkus:
+    http:
+      port: 8080
+      host-enabled: true
 
 logging:
   level:
