feat(ss): names for subsystems
WIP admin side

Refs: XRDDEV-2761

--- a/src/security-server/admin-service/ui/package.json
+++ b/src/security-server/admin-service/ui/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
+    "dev-ss0": "vite --host --mode ss0",
+    "dev-ss1": "vite --host --mode ss1",
     "build": "pnpm run generate-types && vitest --run && vite build",
     "preview": "vite preview",
     "build-only": "vite build",
