--- a/src/security-server/admin-service/application/src/main/resources/permissions.yml
+++ b/src/security-server/admin-service/application/src/main/resources/permissions.yml
@@ -19,6 +19,7 @@
 -     delete_client: [XROAD_REGISTRATION_OFFICER]
 -     disable_client: [XROAD_REGISTRATION_OFFICER]
 -     enable_client: [XROAD_REGISTRATION_OFFICER]
+-     rename_subsystem: [XROAD_REGISTRATION_OFFICER]
 -     view_client_local_groups: [XROAD_SERVICE_ADMINISTRATOR, XROAD_SECURITYSERVER_OBSERVER]
 -       add_local_group: [XROAD_SERVICE_ADMINISTRATOR]
 -       edit_local_group_desc: [XROAD_SERVICE_ADMINISTRATOR]
